Implement responsive design and touch controls

--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
             </div>
         </div>
     </div>
+
+    <!-- タッチコントロール -->
+    <div id="touchControls" class="touch-controls">
+        <button id="touchLeft">←</button>
+        <button id="touchRight">→</button>
+        <button id="touchRotate">回転</button>
+        <button id="touchDown">↓</button>
+        <button id="touchDrop">DROP</button>
+        <button id="touchHold">HOLD</button>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
