バージョン管理を追加

--- a/index.html
+++ b/index.html
@@ -63,6 +63,8 @@
         <button id="touchHold">HOLD</button>
     </div>
 
+    <div id="versionDisplay" class="version-display"></div>
+
     <script src="script.js"></script>
 </body>
 </html>
